{
    "name": "Controls",
    "maps": [
        {
            "name": "Touch",
            "id": "33d4a92c-f8b7-46d6-a462-ff46cd8ba3d6",
            "actions": [
                {
                    "name": "Position1",
                    "type": "PassThrough",
                    "id": "b1f92674-b528-45b1-8301-3977bd317ff4",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Touch1",
                    "type": "PassThrough",
                    "id": "9644c3ee-9c1b-470a-90d7-b6683c13332e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "Position2",
                    "type": "PassThrough",
                    "id": "568cfff8-707c-4e1e-bb15-f06131f5110c",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Touch2",
                    "type": "PassThrough",
                    "id": "befec60e-7e70-4845-bac2-135c76993d4a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "75206dfc-d4ec-40a5-ad22-1a6056fd8160",
                    "path": "<Touchscreen>/touch0/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Touch1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2b66de65-eb71-4f4d-8bc2-cf66c1eb9ca1",
                    "path": "<Touchscreen>/touch1/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Touch2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cde4be37-b18a-4b66-981c-84914e68feab",
                    "path": "<Touchscreen>/touch0/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Position1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a74741d2-d702-4277-8646-d8dc8a01da6f",
                    "path": "<Touchscreen>/touch1/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Position2",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}